# fwupd

./: .travis.yml  gtttt
contrib/: fwupd.spec.in
contrib/ci/: dependencies.xml  generate_docker.py
libfwupd/: fwupd-client.c  fwupd-enums-private.h  fwupd-enums.c  fwupd-enums.h  fwupd-security-attr.c  fwupd-security-attr.h  fwupd.map
libfwupdplugin/: fu-plugin-private.h  fu-plugin-vfuncs.h  fu-plugin.c  fwupdplugin.map
plugins/: meson.build
plugins/ccgx/: fu-ccgx-hpi-device.c  fu-plugin-ccgx.c
plugins/coreboot/: README.md  fu-coreboot-cbmem.h  fu-coreboot-fmap.c  fu-coreboot-fmap.h  fu-coreboot-sysfs.c  fu-coreboot-tables.c  fu-coreboot-tables.h  fu-plugin-coreboot.c  fu-plugin-coreboot.h  meson.build
plugins/dell-dock/: dell-dock.quirk  fu-dell-dock-i2c-ec.c
plugins/swap/: README.md  fu-plugin-swap.c  meson.build
plugins/synaptics-mst/: fu-plugin-synaptics-mst.c  fu-synaptics-mst-device.c  synaptics-mst.quirk
plugins/synaptics-rmi/: synaptics-rmi.quirk
plugins/thunderbolt/: fu-thunderbolt-device.c
plugins/tpm-eventlog/: fu-plugin-tpm-eventlog.c
plugins/uefi/: fu-plugin-uefi.c
plugins/uefi-dbx/: README.md  fu-plugin-uefi-dbx.c  fu-self-test.c  fu-uefi-dbx-common.c  fu-uefi-dbx-file.c  meson.build
src/: fu-agent.c  fu-device-list.c  fu-engine.c  fu-security-attrs.c  fu-self-test.c  fu-tool.c  fu-util-common.c  fu-util.c
